2000-08-15  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm:  Further refine the output of
	the configshow command (menus for enumerated types,
	add links to help pages).

	* files/en/config/log_lifetime:  New variable.  Log
	entries older than this age (default 31 days) will be
	deleted during the daily trigger.

	* lib/Majordomo.pm (set):  Support "check" mode, which
	allows settings to be reviewed but not changed.

	* lib/Mj/CommandProps.pm, lib/Mj/Parser.pm (parse_args):  
	Rearrange 'arguments' data to make per-mode adjustments easier.

	* lib/Mj/Inform.pm (l_expire):  New routine.  Remove log
	entries older than the log_lifetime setting.

2000-08-13  Michael Yount <csf@moscow.com>

	* files/en/ack_archive:  New file, sent when a post is
	archived but not distributed.

	* bin/mj_wwwadm:  Add forms to the output of the configshow
	command to allow settings to be changed or set to the default.
	(only one setting at a time may be changed)

	* lib/Majordomo.pm: (_alias_reverse_lookup) Optionally
	include the bookkeeping alias in the result.  Return
	keys instead of stripsource values.
	(alias) Use list instead of listref error return values.
	(configshow) Indicate if a global password is 
	required to change a particular variable.
	(_changeaddr) Replace the bookkeeping alias correctly.
	(reject) Allow DATE substitution (date of original request).
	(set, _set) Use "check" and "force" variables to allow
	settings to be seen without changing them, and to allow
	list owners to override allowed_* settings that limit
	the changes available to subscribers.

	* lib/mj_cf_data.pl: Remove ack_denials_always.
	Add values for 'flags' variables to allow sanity checks.

	* lib/Mj/Config.pm (parse_flags):  Check the validity
	of flags in list settings (allowed_flags, aliases, ...)

	* lib/Mj/List.pm: (%flags) Add ackdeny, ackpost, ackreject,
	and ackstall settings for fine-grained selection of acknowledgements.
	(set) Implement allowed_classes and allowed_flags checks,