@@ -1,3 +1,9 @@
+2000-08-18  Michael Yount <csf@moscow.com>
+
+	* lib/Majordomo.pm (_rekey):  Allow the registry
+	to be verified or repaired, based upon the subscriber
+	databases, if the registry is corrupted.
+
 2000-08-15  Michael Yount <csf@moscow.com>
 
 	* bin/mj_wwwadm:  Further refine the output of
